# hpg-lib

./: .gitignore  README.md  analyzer.py  demo.ipynb  editor.py  lib_plabic_webs.sage  pyproject.toml  server.ipynb
HourglassClasses/: bridgeconstruction.py  dihedralelement.py  examples.py  face.py  halfhourglass.py  halfstrand.py  hourglassplabicgraph.py  hourglassplabicgraph4.py  idgenerator.py  tests.py  vertex.py
hpg_lib/: __init__.py  examples.py  growthrules.py  halfstrand.py  hourglassplabicgraph.py  prom.py
src/: analyze.html  controller.js  controller_analyzer.js  controller_editor.js  draw.html  draw_analyzer.html  draw_editor.html  face.py  halfhourglass.py  hourglassplabicgraph.py  styles.css  vertex.py
src/.ipynb_checkpoints/: controller-checkpoint.js  draw_analyzer-checkpoint.html  styles-checkpoint.css
stephan's initial code/: analyze.js  code.js  draw.html  test.html
tests/: tests.ipynb
