[project]
name = "hpg-lib"
version = "0.0.2"
description = "A SageMath package for hourglass plabic graphs."
authors = [
  {name = "Joshua P. Swanson", email = "jpswanson3.14@gmail.com"},
  {name = "Stephan Pfannerer", email = "stephan@pfannerer-mittas.net"},
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
repository = "https://github.com/Diagrammatics-Web/hpg-lib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
